<resources>
    <string name="app_name">AndroidViews</string>
    <string name="splash_description">splash</string>
    <string name="jump">跳过 %1$d</string>
    <string name="launcher_description">launcher</string>
    <string name="description_1">干货集中营</string>
    <string name="description_2">每天都有新发现</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">忘记密码?</string>
    <string name="new_user_register">新用户注册</string>
    <string name="login_error">Please input email and password.</string>
    <string name="register">Register</string>
    <string name="registration_agreement">《<u>点击“Register”按钮即表示同意注册协议</u>》</string>
    <string name="information">Information</string>
    <string name="nick_name_label">昵称</string>
    <string name="nick_name">AndroidViews</string>
    <string name="camera_description">camera</string>
    <string name="birthday_label">生日</string>
    <string name="birthday">1999–09–09</string>
    <string name="sex_label">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="hobbies_label">爱好</string>
    <string name="qin">琴</string>
    <string name="qi">棋</string>
    <string name="shu">书</string>
    <string name="hua">画</string>
    <string-array name="occupational">
        <item>Android开发工程师</item>
        <item>iOS开发工程师</item>
        <item>h5开发工程师</item>
        <item>Java开发工程师</item>
        <item>Go开发工程师</item>
        <item>PHP开发工程师</item>
        <item>C++开发工程师</item>
        <item>.net开发工程师</item>
    </string-array>
    <string name="occupational_label">职业</string>
    <string name="occupational_android">Android开发工程师</string>
    <string name="school_label">学校</string>
    <string name="school">湖北工程学院</string>
    <string name="specialty_label">专业</string>
    <string name="specialty">计算机科学与技术</string>
    <string name="address_label">地址</string>
    <string name="address">湖北省恩施土家族苗族自治州建始县</string>
    <string name="home_page_label">主页</string>
    <string name="home_page">https://github.com/maoqiqi</string>
    <string name="finish">完成</string>
    <string name="school_hint">搜索学校</string>
    <string-array name="schools">
        <item>湖北工程学院</item>
        <item>湖北经济学院</item>
        <item>湖北理工学院</item>
        <item>湖北文理学院</item>
        <item>湖北科技学院</item>
        <item>湖北民族学院</item>
    </string-array>
    <string name="specialty_hint">搜索专业</string>
    <string-array name="specialties">
        <item>土木工程专业</item>
        <item>经济学专业</item>
        <item>建筑学专业</item>
        <item>计算机科学与技术专业</item>
        <item>英语专业</item>
        <item>城乡规划专业</item>
        <item>化学专业</item>
        <item>法学专业</item>
        <item>汉语言文学专业</item>
        <item>高分子材料与工程专业</item>
    </string-array>
    <string name="province">省</string>
    <string name="city">市</string>
    <string name="district">区</string>
    <string name="project_description">project</string>
    <string name="git">https://github.com/maoqiqi/AndroidViews</string>
    <string name="scan_code_description">scan_code</string>
    <string name="project_introduction">项目介绍</string>
    <string name="update_description">更新说明</string>
    <string name="scan_code">扫码下载</string>
    <string name="problem_feedback">问题反馈</string>
    <string name="about">关于我们</string>
    <string name="donate">捐赠开发者</string>
    <string name="setting">设置</string>
    <string name="mode_night">夜间</string>
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="mine">Mine</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="classify">分类</string>
    <string name="search">搜索</string>
    <string name="share">分享</string>
    <string name="star">star</string>
    <string name="download_content">喜欢就推荐给你的小伙伴吧，扫描二维码直接下载，或者点击右上角分享链接地址。</string>
    <string name="code_description">code</string>
    <string name="star_content">喜欢的朋友请Star，欢迎一起学习讨论。你的支持将是我最大的动力与褒奖~ O(∩_∩)O ~</string>
    <string name="loading">加载中…</string>
    <string name="copy_url">复制链接</string>
    <string name="open_url">打开链接</string>
    <string name="introduction_title">本案例主要演示安卓常用控件的使用。</string>
    <string name="introduction_1">1. SplashActivity(过渡页面)</string>
    <string name="introduction_2">2. LoginActivity(登录页面)</string>
    <string name="introduction_3">3. RegisterActivity(注册页面)</string>
    <string name="introduction_4">4. InformationActivity(信息页面)</string>
    <string name="introduction_5">5. MainActivity(主页)</string>
    <string name="introduction_1_text">该页面演示了FrameLayout和LinearLayout布局、ImageView和TextView控件的基本使用；以及解决了安卓Handler内存泄漏和全屏Activity进入下一个非全屏Activity出现下移的情况。</string>
    <string name="introduction_2_text">该页面演示了Toolbar、EditText、Button控件的基本使用以及安卓新特性Tint着色功能；演示了使用imeOptions属性设置Enter键的状态，在代码中设置响应事件。</string>
    <string name="introduction_3_text">该页面演示了Android Material Design风格控件中的TextInputLayout、TextInputEditText的基本使用。</string>
    <string name="introduction_4_text">该页面演示了RadioGroup、RadioButton、CheckBox控件的基本使用；第三方控件CircleImageView的使用。</string>
    <string name="introduction_5_text">该页面演示了Android v4 包中的DrawerLayout抽屉控件、Android Material Design风格控件中的BottomNavigationView、NavigationView的基本使用；以及如何解决状态栏透明问题。</string>
    <string name="introduction_read_me">这里只是简单列举一些内容，详见README，如果感兴趣可以下载项目亲自体验一下。</string>
    <string-array name="versions">
        <item>版本 V1.0.0</item>
        <item>版本 V1.0.0</item>
    </string-array>
    <string-array name="version_1_0_0_logs">
        <item>Using layout_marginHorizontal instead of layout_marginStart and layout_marginEnd,layout_marginVertical instead of layout_marginTop and layout_marginBottom,paddingHorizontal instead of paddingStart and paddingEnd,paddingVertical instead of paddingTop and paddingBottom.</item>
        <item>Sign app and update apk.</item>
        <item>Add screenshot.</item>
        <item>Unify and optimize the layout.</item>
        <item>Update gradle version.</item>
        <item>Add simple code for SwipeRefreshLayout.</item>
        <item>Add simple code for ZoomControls.</item>
        <item>Add simple code for ViewStub.</item>
        <item>Add simple code for AdapterViewFlipper.</item>
        <item>ViewFlipperActivity and ViewSwitcherActivity are merged into ViewAnimatorActivity, and add simple code for ViewAnimator.</item>
        <item>Add simple code for ViewPager.</item>
        <item>Add simple code for ViewFlipper.</item>
        <item>Update MineFragment and Add simple code for StackView.</item>
        <item>Add simple code for ExpandableListView.</item>
        <item>Add simple code for Gallery.</item>
        <item>Perfect AddressActivity.</item>
        <item>Add simple code for ImageSwitcher and ViewSwitcher.</item>
        <item>Demonstrate the use of TextSwitcher.</item>
        <item>Demonstrate the use of HorizontalScrollView and add custom scroll bar style.</item>
        <item>Demonstrate the use of TextClock and add app compat views.</item>
        <item>Perfect detail and fix bug.</item>
        <item>Perfect AddressActivity province city district level 3 cascade.</item>
        <item>Complete AddressActivity and Fix some detail questions.</item>
        <item>Setting interface add more content.</item>
        <item>Complete OccupationalActivity.</item>
        <item>Demonstrate the use of CalendarView.</item>
        <item>Demonstrate the use of SearchView.</item>
        <item>Demonstrate the use of SlidingPaneLayout.</item>
        <item>Demonstrate the use of Spinner.</item>
        <item>Demonstrate the use of ProgressBar, RatingBar and SeekBar.</item>
        <item>Demonstrate the use of GridLayout and ImageButton.</item>
        <item>Complete the UI layout of mine page.</item>
        <item>Home to add RecyclerView to display gank data.</item>
        <item>Setting interface to add Switch view.</item>
        <item>ViewPager+GridView of Home page add real data and icons.</item>
        <item>Home to add ViewPager nesting GridView to achieve paging scrolling.</item>
        <item>Update settings interface, demonstrate CheckedTextView, SwitchCompat, ToggleButton to achieve the setting effect.</item>
        <item>Complete SchoolActivity.</item>
        <item>The home page implement Fragment cache, and news list is lazy loaded.</item>
        <item>Analysis and display of news JSON data.</item>
        <item>Complete SettingActivity.</item>
        <item>Complete DonateActivity.</item>
        <item>Modify the item background color of ProblemFeedbackActivity and AboutActivity, and modify AboutActivity content.</item>
        <item>Unified color resource and divide line height.</item>
        <item>Complete AboutActivity.</item>
        <item>Complete ProblemFeedbackActivity.</item>
        <item>Complete UpdateDescriptionActivity.</item>
        <item>Complete ProjectIntroductionActivity.</item>
        <item>Complete WebViewActivity and project jump to GitHub.</item>
        <item>Upload apk.</item>
        <item>Complete ScanCodeActivity.</item>
        <item>Subcontracting management for all Activity.</item>
        <item>Use StatusBarView to adapt the status bar.</item>
        <item>Add Banner to HomeFragment.</item>
        <item>Set the color of ActionBarDrawerToggle\'s DrawerArrowDrawable and modify height of status bar.</item>
        <item>Complete MainActivity.</item>
        <item>In InformationActivity, occupational information is added.</item>
        <item>Complete InformationActivity.</item>
        <item>LoginActivity EditText add imeOptions attribute to monitor keyboard Enter key, complete RegisterActivity.</item>
        <item>Build project、complete SplashActivity and LoginActivity.</item>
    </string-array>
    <string name="problem_feedback_content">您好，很希望得到您的意见，您可以在GitHub的Issues处说明问题原因，也可以通过以下方式联系我 ~ </string>
    <string name="issues">Issues</string>
    <string name="faq_name">常见问题</string>
    <string name="contact_me">联系我</string>
    <string name="qq">QQ</string>
    <string name="current_version">当前版本 V%1$s</string>
    <string name="function_introduction">功能介绍</string>
    <string name="check_update">检查更新</string>
    <string name="give_a_star">给个Star吧</string>
    <string name="alipay">支付宝</string>
    <string name="wxpay">微信</string>
    <string name="pay_description">pay</string>
    <string name="remember_password">记住密码</string>
    <string name="off">关</string>
    <string name="on">开</string>
    <string name="setting_wifi">仅Wi-Fi网络下载图片</string>
    <string name="setting_phone">允许通过手机号找到我</string>
    <string name="setting_email">允许通过邮箱找到我</string>
    <string name="setting_nick_name">允许通过昵称找到我</string>
    <string name="system_animation_title">系统动画</string>
    <string name="system_animation_content">在整个应用中，应用系统动画</string>
    <string name="launcher_page_title">启动页妹子图</string>
    <string name="launcher_page_content_1">没有妹子太寂寞</string>
    <string name="launcher_page_content_2">基佬怎么会需要妹子</string>
    <string name="launcher_page_random_title">随机出现</string>
    <string name="launcher_page_random_content_1">偶尔来个惊喜就行</string>
    <string name="phone">152******17</string>
    <string name="text_clock">TextClock</string>
    <string name="bar">ProgressBar…</string>
    <string name="view_stub">ViewStub</string>
    <string name="zoom_controls">ZoomControls</string>
    <string name="horizontal_scroll_view">HorizontalScrollView</string>
    <string name="view_animator">ViewAnimator</string>
    <string name="gallery">Gallery</string>
    <string name="expandable_list_view">ExpandableListView</string>
    <string name="adapter_view_animator">AdapterViewAnimator</string>
    <string name="grid_Layout_image_view">GridLayout &amp; ImageView</string>
    <string name="sliding_pane_layout">SlidingPaneLayout</string>
    <string name="view_pager">ViewPager</string>
</resources>