<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:fitsSystemWindows="true"
    tools:context=".activity.ProjectIntroductionActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:contentScrim="@color/color_primary"
            app:expandedTitleMargin="16dp"
            app:expandedTitleTextAppearance="@style/project_introduction_expanded_title_text_appearance"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:statusBarScrim="@color/color_primary_dark">

            <ImageView
                android:id="@+id/iv_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_project_introduction"
                android:contentDescription="@null"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/transparent"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_back"
                app:popupTheme="@style/tool_bar_popup_theme"
                app:titleTextColor="@color/text_color_title" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/sixteen">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sixteen"
                android:text="@string/introduction_title"
                android:textColor="@color/text_color_primary"
                android:textSize="@dimen/text_size_big" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sixteen"
                android:text="@string/introduction_1"
                android:textColor="@color/text_color_gray_dark"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eight"
                android:lineSpacingExtra="@dimen/four"
                android:text="@string/introduction_1_text"
                android:textColor="@color/text_color_gray"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eight"
                android:text="@string/introduction_2"
                android:textColor="@color/text_color_gray_dark"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eight"
                android:lineSpacingExtra="@dimen/four"
                android:text="@string/introduction_2_text"
                android:textColor="@color/text_color_gray"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eight"
                android:text="@string/introduction_3"
                android:textColor="@color/text_color_gray_dark"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eight"
                android:lineSpacingExtra="@dimen/four"
                android:text="@string/introduction_3_text"
                android:textColor="@color/text_color_gray"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eight"
                android:text="@string/introduction_4"
                android:textColor="@color/text_color_gray_dark"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eight"
                android:lineSpacingExtra="@dimen/four"
                android:text="@string/introduction_4_text"
                android:textColor="@color/text_color_gray"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eight"
                android:text="@string/introduction_5"
                android:textColor="@color/text_color_gray_dark"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eight"
                android:lineSpacingExtra="@dimen/four"
                android:text="@string/introduction_5_text"
                android:textColor="@color/text_color_gray"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sixteen"
                android:lineSpacingExtra="@dimen/four"
                android:text="@string/introduction_read_me"
                android:textColor="@color/text_color_gray_dark"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_menu_share"
        app:backgroundTint="@color/color_primary"
        app:fabSize="normal"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|end" />
</android.support.design.widget.CoordinatorLayout>