<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_primary"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_project"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/sixteen"
                android:layout_marginStart="@dimen/sixteen"
                android:layout_marginTop="@dimen/eight"
                android:contentDescription="@string/project_description"
                android:src="@drawable/ic_project"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_nick_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sixteen"
                android:text="@string/nick_name"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_normal"
                app:layout_constraintBottom_toTopOf="@id/tv_phone"
                app:layout_constraintStart_toEndOf="@id/iv_project"
                app:layout_constraintTop_toTopOf="@id/iv_project"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/sixteen"
                android:layout_marginTop="@dimen/four"
                android:text="@string/phone"
                android:textColor="@color/text_color_gray"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintBottom_toBottomOf="@id/iv_project"
                app:layout_constraintStart_toEndOf="@id/iv_project"
                app:layout_constraintTop_toBottomOf="@id/tv_nick_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/twelve"
                android:drawableEnd="@drawable/ic_arrow_right"
                android:drawableTint="@color/text_color_hint"
                app:layout_constraintBottom_toBottomOf="@id/iv_project"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/iv_project" />
        </android.support.constraint.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_marginTop="@dimen/sixteen"
            android:background="@color/color_line" />

        <TextView
            android:id="@+id/tv_text_clock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_setting_item"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawableTint="@color/text_color_hint"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:paddingEnd="@dimen/twelve"
            android:paddingStart="@dimen/sixteen"
            android:text="@string/text_clock"
            android:textColor="@color/text_color_primary"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/tv_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_setting_item"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawableTint="@color/text_color_hint"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:paddingEnd="@dimen/twelve"
            android:paddingStart="@dimen/sixteen"
            android:text="@string/bar"
            android:textColor="@color/text_color_primary"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/tv_view_stub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_setting_item"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawableTint="@color/text_color_hint"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:paddingEnd="@dimen/twelve"
            android:paddingStart="@dimen/sixteen"
            android:text="@string/view_stub"
            android:textColor="@color/text_color_primary"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/tv_zoom_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_setting_item"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawableTint="@color/text_color_hint"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:paddingEnd="@dimen/twelve"
            android:paddingStart="@dimen/sixteen"
            android:text="@string/zoom_controls"
            android:textColor="@color/text_color_primary"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/tv_horizontal_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_setting_item"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawableTint="@color/text_color_hint"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:paddingEnd="@dimen/twelve"
            android:paddingStart="@dimen/sixteen"
            android:text="@string/horizontal_scroll_view"
            android:textColor="@color/text_color_primary"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/tv_view_animator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_setting_item"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawableTint="@color/text_color_hint"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:paddingEnd="@dimen/twelve"
            android:paddingStart="@dimen/sixteen"
            android:text="@string/view_animator"
            android:textColor="@color/text_color_primary"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/tv_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_setting_item"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawableTint="@color/text_color_hint"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:paddingEnd="@dimen/twelve"
            android:paddingStart="@dimen/sixteen"
            android:text="@string/gallery"
            android:textColor="@color/text_color_primary"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/tv_expandable_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_setting_item"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawableTint="@color/text_color_hint"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:paddingEnd="@dimen/twelve"
            android:paddingStart="@dimen/sixteen"
            android:text="@string/expandable_list_view"
            android:textColor="@color/text_color_primary"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/tv_adapter_view_animator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_setting_item"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawableTint="@color/text_color_hint"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:paddingEnd="@dimen/twelve"
            android:paddingStart="@dimen/sixteen"
            android:text="@string/adapter_view_animator"
            android:textColor="@color/text_color_primary"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/tv_grid_Layout_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_setting_item"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawableTint="@color/text_color_hint"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:paddingEnd="@dimen/twelve"
            android:paddingStart="@dimen/sixteen"
            android:text="@string/grid_Layout_image_view"
            android:textColor="@color/text_color_primary"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/tv_sliding_pane_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_setting_item"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawableTint="@color/text_color_hint"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:paddingEnd="@dimen/twelve"
            android:paddingStart="@dimen/sixteen"
            android:text="@string/sliding_pane_layout"
            android:textColor="@color/text_color_primary"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/tv_view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_setting_item"
            android:drawableEnd="@drawable/ic_arrow_right"
            android:drawableTint="@color/text_color_hint"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:paddingEnd="@dimen/twelve"
            android:paddingStart="@dimen/sixteen"
            android:text="@string/view_pager"
            android:textColor="@color/text_color_primary"
            android:textSize="@dimen/text_size_normal" />
    </LinearLayout>
</ScrollView>