<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/iv_splash"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/splash_description"
        android:scaleType="fitXY"
        android:src="@drawable/bg_splash_placeholder" />

    <TextView
        android:id="@+id/tv_jump"
        android:layout_width="70dp"
        android:layout_height="28dp"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/sixteen"
        android:layout_marginTop="@dimen/twenty_four"
        android:background="@drawable/bg_jump"
        android:gravity="center"
        android:text="@string/jump"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_gravity="bottom"
        android:background="#55000000"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/logo_description"
            android:src="@mipmap/ic_launcher" />

        <View
            android:layout_width="1dp"
            android:layout_height="36dp"
            android:layout_marginLeft="@dimen/sixteen"
            android:layout_marginRight="@dimen/sixteen"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_1"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_bigger" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/description_2"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_smaller" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>